--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   </head>
   <body>
     <header>
-      <h1>HoshmandLab</h1>
-      <nav>
-        <ul>
-          <a href="./public/home.html">home</a>
-          <a href="./public/about.html">about</a>
-          <a href="./public/courses.html">courses</a>
-          <a href="./public/contacts.html">contacts</a>
-        </ul>
-      </nav>
+      <a id="link" href="index.html">HoshmandLab</a>
     </header>
+    <nav>
+      <ul>
+        <a id="page" href="./public/home.html">home</a>
+        <a id="page" href="./public/about.html">about</a>
+        <a id="page" href="./public/courses.html">courses</a>
+        <a id="page" href="./public/contacts.html">contacts</a>
+      </ul>
+    </nav>
     <main>
       <article>
         <h1>LET ME LEARN!</h1>
@@ -27,9 +27,9 @@
         </figure>
       </article>
     </main>
+    <hr />
     <footer>
-      <hr />
-      <p><strong>©Copyright</strong> 2023 by nobody. All rights reversed.</p>
+      <p>©2023 HoshmandLab. All rights reversed.</p>
     </footer>
   </body>
 </html>
