--- a/public/about.html
+++ b/public/about.html
@@ -9,14 +9,14 @@
   </head>
   <body>
     <header>
-      <h1>HoshmandLab</h1>
+      <a href="../index.html" id="link">HoshmandLab</a>
     </header>
     <nav>
       <ul>
-        <a href="home.html">home</a>
-        <a href="about.html">about</a>
-        <a href="courses.html">courses</a>
-        <a href="contacts.html">contacts</a>
+        <a id="page" href="home.html">home</a>
+        <a id="page" href="about.html">about</a>
+        <a id="page" href="courses.html">courses</a>
+        <a id="page" href="contacts.html">contacts</a>
       </ul>
     </nav>
     <main>
@@ -103,7 +103,7 @@
     </main>
     <hr />
     <footer>
-      <p><strong>©Copyright</strong> 2023 by nobody. All rights reversed.</p>
+      <p>©2023 <em>HoshmandLab</em>. All rights reserved.</p>
     </footer>
   </body>
 </html>
