--- a/public/contacts.html
+++ b/public/contacts.html
@@ -9,17 +9,18 @@
   </head>
   <body>
     <header>
-      <h1>HoshmandLab</h1>
+      <a href="../index.html" id="link">HoshmandLab</a>
     </header>
     <nav>
       <ul>
-        <a href="home.html">home</a>
-        <a href="about.html">about</a>
-        <a href="courses.html">courses</a>
-        <a href="contacts.html">contacts</a>
+        <a id="page" href="home.html">home</a>
+        <a id="page" href="about.html">about</a>
+        <a id="page" href="courses.html">courses</a>
+        <a id="page" href="contacts.html">contacts</a>
       </ul>
     </nav>
     <main>
+      <section><a href="mailto:hoshmand@gmail.edu">Send Email</a></section>
       <section>
         <a href="https://twitter.com/lotfullah_">Twitter</a>
       </section>
@@ -35,9 +36,9 @@
         <a href="https://www.instagram.com/lotfullah_andishmand/">instagram</a>
       </section>
     </main>
+    <hr />
+    <footer>
+      <p>©2023 <em>HoshmandLab</em>. All rights reserved.</p>
+    </footer>
   </body>
-  <hr />
-  <footer>
-    <p><strong>©Copyright</strong> 2023 by nobody. All rights reversed.</p>
-  </footer>
 </html>
