--- a/public/home.html
+++ b/public/home.html
@@ -9,20 +9,22 @@
   </head>
   <body>
     <header>
-      <h1>HoshmandLab</h1>
-      <nav>
-        <ul>
-          <a href="home.html">home</a>
-          <a href="about.html">about</a>
-          <a href="courses.html">courses</a>
-          <a href="contacts.html">contacts</a>
-        </ul>
-      </nav>
+      <a href="../index.html" id="link">HoshmandLab</a>
     </header>
+    <nav>
+      <ul>
+        <a id="page" href="home.html">home</a>
+        <a id="page" href="about.html">about</a>
+        <a id="page" href="courses.html">courses</a>
+        <a id="page" href="contacts.html">contacts</a>
+      </ul>
+    </nav>
+
     <main>
       <h2>Let me learn and to see my happy face</h2>
       <figure>
         <img
+          subject
           src="../assests/images/imaginary_girl.jpg"
           alt="afghan child,holding a chalk"
         />
@@ -37,7 +39,7 @@
     </main>
     <hr />
     <footer>
-      <p><strong>©Copyright</strong> 2023 by nobody. All rights reversed.</p>
+      <p>©2023 <em>HoshmandLab</em>. All rights reserved.</p>
     </footer>
   </body>
 </html>
