--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=\, initial-scale=1.0" />
-    <link rel="stylesheet" href="./public/style.css" />
+    <meta
+      name="description"
+      content="School,Afghanistan,Education, Afghan Girls"
+    />
+    <meta name="robots" content="noindex" />
+    <meta name="viewport" content="width=device-width , initial-scale=1.0" />
+    <meta name="googlebot" content="translate" />
+    <meta name="HandheldFriendly" content="true" />
+    <!-- OG:Protocol -->
+    <meta property="og:title" content="HoshmandLab" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="./assets/happy_sisters.jpg" />
+    <meta property="og:description" content="Afhgan Girls can learn too" />
+    <link rel="icon" href="#" />
+    <link rel="icon" href="#" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>HoshmandLab</title>
   </head>
   <body>
@@ -23,7 +37,7 @@
       <article>
         <h1>LET ME LEARN!</h1>
         <figure>
-          <img src="./assests/images/thinking_girl.jpg" />
+          <img src="./assets/images/thinking_girl.jpg" />
         </figure>
       </article>
     </main>
@@ -31,5 +45,6 @@
     <footer>
       <p>©2023 HoshmandLab. All rights reversed.</p>
     </footer>
+    <script src="#"></script>
   </body>
 </html>
