--- a/public/about.html
+++ b/public/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -25,7 +25,7 @@
         <h3>first story</h3>
         <section>
           <figure>
-            <img src="../assests/images/children.jpg" width="400" />
+            <img src="../assets/images/children.jpg" width="400" />
             <figcaption style="text-align: center">
               Afghan Children who should be in school
             </figcaption>
@@ -46,7 +46,7 @@
         <section>
           <h3>Another side of story</h3>
           <figure>
-            <img src="../assests/images/children_school.jpg" width="400" />
+            <img src="../assets/images/children_school.jpg" width="400" />
             <figcaption style="text-align: center">
               Afghan Children who are in school but, facing an unprecedent
               future.
