--- a/public/courses.html
+++ b/public/courses.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
 
     <title>My page title</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
 
   <body>
@@ -45,7 +45,7 @@
             Canada by Hinton and Yoshua Bengion, lets not forget MIT Scientists.
           </p>
           <figure>
-            <img id="subject" src="../assests/images/ai/ai.jpg" />
+            <img id="subject" src="../assets/images/ai/ai.jpg" />
             <figcaption>a simple generated image</figcaption>
           </figure>
         </section>
@@ -69,7 +69,7 @@
             prediction.
           </p>
           <figure>
-            <img id="subject" src="../assests/images/ai/machine.jpg" />
+            <img id="subject" src="../assets/images/ai/machine.jpg" />
             <figcaption>a computer and stock data.</figcaption>
           </figure>
         </section>
@@ -89,8 +89,8 @@
             best in all area of Artificial Intelligence.
           </p>
           <figure aria-colspan="2">
-            <img id="subject" src="../assests/images/ai/neuron.jpg" />
-            <img id="subject" src="../assests/images/ai/neurons.jpg" />
+            <img id="subject" src="../assets/images/ai/neuron.jpg" />
+            <img id="subject" src="../assets/images/ai/neurons.jpg" />
             <figcaption>Neurons and Neural Network</figcaption>
           </figure>
         </section>
@@ -106,7 +106,7 @@
           <figure>
             <img
               id="subject"
-              src="../assests/images/ai/reinforcement-learning.jpg"
+              src="../assets/images/ai/reinforcement-learning.jpg"
             />
             <figcaption>a robot and the choices to make</figcaption>
           </figure>
