--- a/public/home.html
+++ b/public/home.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- OG:Protocol -->
+
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -25,13 +27,13 @@
       <figure>
         <img
           subject
-          src="../assests/images/imaginary_girl.jpg"
+          src="../assets/images/imaginary_girl.jpg"
           alt="afghan child,holding a chalk"
         />
       </figure>
       <figure>
         <img
-          src="../assests/images/happy_sisters.jpg"
+          src="../assets/images/happy_sisters.jpg"
           width="1000"
           alt="afghan child,holding a chalk"
         />
