--- a/public/about.html
+++ b/public/about.html
@@ -13,15 +13,16 @@
     </header>
     <nav>
       <ul>
-        <a id="page" href="home.html">home</a>
-        <a id="page" href="about.html">about</a>
-        <a id="page" href="courses.html">courses</a>
-        <a id="page" href="contacts.html">contacts</a>
+        <a id="page" href="home.html">Home</a>
+        <a id="page" href="about.html">About</a>
+        <a id="page" href="courses.html">Courses</a>
+        <a id="page" href="contacts.html">Contact</a>
+        <a id="page" href="signup.html">SignUp</a>
       </ul>
     </nav>
     <main>
       <article>
-        <h2>Four different story</h2>
+        <h2>Four different stories</h2>
         <h3>first story</h3>
         <section>
           <figure>
@@ -64,7 +65,7 @@
         <section>
           <h3>Another side of story</h3>
           <figure>
-            <img src="../assests/images/afg_girl.jpg" width="400" />
+            <img src="../assets/images/afg_girl.jpg" width="400" />
             <figcaption style="text-align: center">
               the moment when Afghan girls are banned from going to school
             </figcaption>
@@ -83,13 +84,10 @@
         <h3>The face and story all we want</h3>
         <figure>
           <img
-            src="../assests/images/afghan-girl-happy-children.jpg"
+            src="../assets/images/afghan-girl-happy-children.jpg"
             width="400"
           />
-          <img
-            src="../assests/images/afghan_child_happy_face.jpg"
-            width="400"
-          />
+          <img src="../assets/images/afghan_child_happy_face.jpg" width="400" />
           <figcaption>Happy facees</figcaption>
         </figure>
         <p>
@@ -100,6 +98,34 @@
           my sisters down.
         </p>
       </article>
+      <section>
+        <section id="goal">
+          <h2>What we do?</h2>
+          <p>
+            <strong>
+              We provide free coding classes for everyone and help the girls
+              with one to one mentorship and guidances.
+            </strong>
+          </p>
+        </section>
+        <iframe
+          src="https://www.youtube.com/embed/muVQb5MG7cM"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share camera 'none; microphone 'none' "
+          allowfullscreen
+          muted
+        ></iframe
+        ><br />
+        <iframe
+          src="https://www.youtube-nocookie.com/embed/PbgTdXc-_NU"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share camera 'none; microphone 'none' "
+          allowfullscreen
+          muted
+        ></iframe>
+
     </main>
     <hr />
     <footer>
