--- a/public/contacts.html
+++ b/public/contacts.html
@@ -13,10 +13,11 @@
     </header>
     <nav>
       <ul>
-        <a id="page" href="home.html">home</a>
-        <a id="page" href="about.html">about</a>
-        <a id="page" href="courses.html">courses</a>
-        <a id="page" href="contacts.html">contacts</a>
+        <a id="page" href="home.html">Home</a>
+        <a id="page" href="about.html">About</a>
+        <a id="page" href="courses.html">Courses</a>
+        <a id="page" href="contacts.html">Contact</a>
+        <a id="page" href="signup.html">SignUp</a>
       </ul>
     </nav>
     <main>
