--- a/public/courses.html
+++ b/public/courses.html
@@ -15,10 +15,11 @@
     </header>
     <nav>
       <ul>
-        <a id="page" href="home.html">home</a>
-        <a id="page" href="about.html">about</a>
-        <a id="page" href="courses.html">courses</a>
-        <a id="page" href="contacts.html">contacts</a>
+        <a id="page" href="home.html">Home</a>
+        <a id="page" href="about.html">About</a>
+        <a id="page" href="courses.html">Courses</a>
+        <a id="page" href="contacts.html">Contact</a>
+        <a id="page" href="signup.html">SignUp</a>
       </ul>
     </nav>
     <!-- <nav>
@@ -112,6 +113,40 @@
           </figure>
         </section>
       </article>
+      <section id="choices">
+        <input type="checkbox" id="ai" name="ai" value="AI" />
+        <label for="ai">Artificial Intelligence</label><br />
+        <input
+          type="checkbox"
+          id="machine_learning"
+          name="machine learning"
+          value="Machine Learning"
+        />
+        <label for="machine_learning">Machine Learning</label><br />
+        <input
+          type="checkbox"
+          id="deep_learning"
+          name="Deep Learning"
+          value="DL"
+        />
+        <label for="deep_learning">Deep Learning</label><br />
+
+        <input
+          type="radio"
+          id="artificil_intelligence"
+          name="theme"
+          value="Light"
+        />
+        <label for="artificil_intelligence">Artificil Intelligence</label>
+        <input type="radio" id="machine_learning" name="theme" value="Dark" />
+        <label for="machine_learning">Machine Learning</label><br />
+      </section>
+      <section>
+        <input type="radio" id="mit" name="theme" value="Light" />
+        <label for="mit">Masachuset Institute of Technology</label>
+        <input type="radio" id="std" name="theme" value="Dark" />
+        <label for="std">Stanford University</label><br />
+      </section>
 
       <!-- the aside content can also be nested within the main content -->
       <aside>
