--- a/index.html
+++ b/index.html
@@ -16,9 +16,31 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="./assets/happy_sisters.jpg" />
     <meta property="og:description" content="Afhgan Girls can learn too" />
+    <meta
+      property="og:url"
+      content="https://lotfullah21.github.io/hoshmandlab/public/home.html"
+    />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:title" content="HoshmandLab " />
+    <meta
+      name="twitter:description"
+      content=" We are here to build the future,all together"
+    />
+    <meta name="twitter:image" content="./assets/images/happy_sisters.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lotfullah_" />
+
     <link rel="icon" href="#" />
     <link rel="icon" href="#" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+
     <title>HoshmandLab</title>
   </head>
   <body>
@@ -31,6 +53,7 @@
         <a id="page" href="./public/about.html">about</a>
         <a id="page" href="./public/courses.html">courses</a>
         <a id="page" href="./public/contacts.html">contacts</a>
+        <a id="page" href="./public/signup.html">SignUp</a>
       </ul>
     </nav>
     <main>
