--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <link rel="icon" href="#" />
     <link rel="icon" href="#" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
-    />
+    /> -->
 
     <title>HoshmandLab</title>
   </head>
@@ -47,14 +47,13 @@
     <header>
       <a id="link" href="index.html">HoshmandLab</a>
     </header>
-    <nav>
-      <ul>
-        <a id="page" href="./public/home.html">home</a>
-        <a id="page" href="./public/about.html">about</a>
-        <a id="page" href="./public/courses.html">courses</a>
-        <a id="page" href="./public/contacts.html">contacts</a>
-        <a id="page" href="./public/signup.html">SignUp</a>
-      </ul>
+    <nav class="navbar_section">
+      <a class="pages" href="./public/home.html">home</a>
+      <a class="pages" href="./public/about.html">about</a>
+      <a class="pages" href="./public/courses.html">courses</a>
+      <a class="pages" href="./public/contacts.html">contacts</a>
+      <a class="pages" href="./public/signup.html">SignUp</a>
+      <a class="pages" href="./public/gallery.html">Gallery</a>
     </nav>
     <main>
       <article>
