--- a/public/signup.html
+++ b/public/signup.html
@@ -11,14 +11,12 @@
     <header>
       <a href="../index.html" id="link">HoshmandLab</a>
     </header>
-    <nav>
-      <ul>
-        <a id="page" href="home.html">Home</a>
-        <a id="page" href="about.html">About</a>
-        <a id="page" href="courses.html">Courses</a>
-        <a id="page" href="contacts.html">Contact</a>
-        <a id="page" href="signup.html">SignUp</a>
-      </ul>
+    <nav class="navbar_section">
+      <a id="page" href="home.html">Home</a>
+      <a id="page" href="about.html">About</a>
+      <a id="page" href="courses.html">Courses</a>
+      <a id="page" href="contacts.html">Contact</a>
+      <a id="page" href="signup.html">SignUp</a>
     </nav>
     <main>
       <h2>Sign UP</h2>
