--- a/public/contacts.html
+++ b/public/contacts.html
@@ -11,13 +11,14 @@
     <header>
       <a href="../index.html" id="link">HoshmandLab</a>
     </header>
-    <nav>
+    <nav class="navbar_section">
       <ul>
-        <a id="page" href="home.html">Home</a>
-        <a id="page" href="about.html">About</a>
-        <a id="page" href="courses.html">Courses</a>
-        <a id="page" href="contacts.html">Contact</a>
-        <a id="page" href="signup.html">SignUp</a>
+        <a class="pages" href="home.html">Home</a>
+        <a class="pages" href="about.html">About</a>
+        <a class="pages" href="courses.html">Courses</a>
+        <a class="pages" href="contacts.html">Contact</a>
+        <a class="pages" href="signup.html">SignUp</a>
+        <a class="pages" href="gallery.html">Gallery</a>
       </ul>
     </nav>
     <main>
