--- a/public/courses.html
+++ b/public/courses.html
@@ -10,17 +10,15 @@
 
   <body>
     <!-- Here is our main header that is used across all the pages of our website -->
-    <header>
+    <header class="logo">
       <a href="../index.html" id="link">HoshmandLab</a>
     </header>
-    <nav>
-      <ul>
-        <a id="page" href="home.html">Home</a>
-        <a id="page" href="about.html">About</a>
-        <a id="page" href="courses.html">Courses</a>
-        <a id="page" href="contacts.html">Contact</a>
-        <a id="page" href="signup.html">SignUp</a>
-      </ul>
+    <nav class="navbar_section">
+      <a id="page" href="home.html">Home</a>
+      <a id="page" href="about.html">About</a>
+      <a id="page" href="courses.html">Courses</a>
+      <a id="page" href="contacts.html">Contact</a>
+      <a id="page" href="signup.html">SignUp</a>
     </nav>
     <!-- <nav>
       <form>
