--- a/index.html
+++ b/index.html
@@ -44,17 +44,23 @@
     <title>HoshmandLab</title>
   </head>
   <body>
-    <header>
-      <a id="link" href="index.html">HoshmandLab</a>
-    </header>
-    <nav class="navbar_section">
-      <a class="pages" href="./public/home.html">home</a>
-      <a class="pages" href="./public/about.html">about</a>
-      <a class="pages" href="./public/courses.html">courses</a>
-      <a class="pages" href="./public/contacts.html">contacts</a>
-      <a class="pages" href="./public/signup.html">SignUp</a>
-      <a class="pages" href="./public/gallery.html">Gallery</a>
-    </nav>
+    <div class="header-container">
+      <div class="desktop-header">
+        <div class="content">
+          <div class="left">
+            <a href="./public/home.html"> <header class="header-title">HoshmandLab</header></a>
+          </div>
+          <div class="right">
+            <a class="courses-button" href="./public/courses.html">Courses</a>
+            <a class="home" href="./public/home.html">Home</a>
+            <a class="about" href="./public/about.html">About</a>
+            <a class="contact" href="./public/contacts.html">Contact</a>
+              <a class="contact" href="./public/gallery.html">gallery</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
     <main>
       <article>
         <h1>LET ME LEARN!</h1>
