--- a/public/courses.html
+++ b/public/courses.html
@@ -14,18 +14,13 @@
       <a href="../index.html" id="link">HoshmandLab</a>
     </header>
     <nav class="navbar_section">
-      <a id="page" href="home.html">Home</a>
-      <a id="page" href="about.html">About</a>
-      <a id="page" href="courses.html">Courses</a>
+      <a id="page" href="../index.html">Home</a>
+      <a id="page" href="#course_notes.html">Course Notes</a>
+      <a id="page" href="#lecture_videos.html">Lecture Videos</a>
+      <a id="page" href="#projects.html">Projects</a>
+      <a id="page" href="#Schedule.html">Schedule</a>
       <a id="page" href="contacts.html">Contact</a>
-      <a id="page" href="signup.html">SignUp</a>
     </nav>
-    <!-- <nav>
-      <form>
-        <input type="search" name="q" placeholder="Search query" />
-        <input type="submit" value="Go!" />
-      </form>
-    </nav> -->
 
     <!-- Here is our page's main content -->
     <main>
